migração do frontend do projeto para o framework bulma

--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,39 +1,15 @@
-.p-justify{
-	text-align: justify;
+:root {
+  --gold: #daa520ff;
 }
 
-/* Cada projeto é uma linha flexível (substitui .row) */
-.flex-projeto {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 2rem;
+.has-text-gold {
+  color: var(--gold) !important;
 }
 
-/* Coluna da imagem e coluna do texto */
-.project-image, .project-texto {
-  flex: 1 1 50%;
+.has-background-gold {
+  background-color: var(--gold) !important;
 }
 
-/* Responsividade */
-@media (max-width: 992px) {
-  .flex-projeto {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-}
-
-@media (max-width: 768px) {
-  .flex-projeto {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .project-image, .project-texto {
-    flex: 1 1 100%;
-  }
-
-  .project-texto a {
-    display: inline-block;
-  }
+.border-gold {
+  border: 3px solid var(--gold);
 }
