--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -75,8 +75,7 @@
         <p>&copy; 2025 Rodrigo Barbosa De Sousa - Todos os direitos reservados.</p>
         <div class="is-flex is-justify-content-center is-flex-wrap-wrap mt-2">
             <a href="https://github.com/RodrigoLee56" target="_blank" class="has-text-white mx-3">GitHub</a>
-            <a href="https://www.linkedin.com/in/rodrigo-barbosa-de-sousa/" target="_blank" class="has-text-white mx-3">LinkedIn</a>
-            <a href="mailto:rodrigobarbosadesousa5608@gmail.com" class="has-text-white mx-3">E-mail</a>
+            <a href="https://www.linkedin.com/in/rodrigo-java/" target="_blank" class="has-text-white mx-3">LinkedIn</a>
         </div>
     </div>
 </footer>
