--- a/src/main/resources/templates/contato.html
+++ b/src/main/resources/templates/contato.html
@@ -2,8 +2,8 @@
 <html lang="pt-BR" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Rodrigo Barbosa De Sousa - Contato</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rodrigo Barbosa De Sousa - Contato</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"> 
     <link rel="stylesheet" th:href="@{/css/estilos.css}" />
 </head>
@@ -74,7 +74,7 @@
                     <h5 class="title is-5 has-text-gold">Também me encontre aqui:</h5>
                     <div class="mt-3">
                         <a href="https://github.com/RodrigoLee56" target="_blank" class="mx-3 has-text-gold">GitHub</a>
-                        <a href="https://linkedin.com/in/rodrigo-barbosa-de-sousa/" target="_blank" class="mx-3 has-text-gold">LinkedIn</a>
+                        <a href="https://linkedin.com/in/rodrigo-java/" target="_blank" class="mx-3 has-text-gold">LinkedIn</a>
                         <a href="mailto:rodrigobarbosadesousa5608@gmail.com" class="mx-3 has-text-gold">E-mail</a>
                     </div>
                 </div>
@@ -89,11 +89,11 @@
         <p>&copy; 2025 Rodrigo Barbosa De Sousa - Todos os direitos reservados.</p>
         <div class="mt-3">
             <a class="mx-3 has-text-gold" href="https://github.com/RodrigoLee56">GitHub</a>
-            <a class="mx-3 has-text-gold" href="https://linkedin.com/in/rodrigo-barbosa-de-sousa/">LinkedIn</a>
+            <a class="mx-3 has-text-gold" href="https://linkedin.com/in/rodrigo-java/">LinkedIn</a>
         </div>
     </div>
 </footer>
 
-<script src="/js/navbar.js"></script>
+<script th:src="@{/js/scripts.js}"></script>
 </body>
 </html>
